# octree_pathtracing

./: .gitignore  Cargo.toml  debug.txt  r.0.0.mca  tile.ppm
assets/shaders/: structs.wgsl  svo.wgsl
src/: aabb.rs  app.rs  axis.rs  block_model.rs  bvh.rs  camera.rs  cuboid.rs  geometry.rs  gpu_structs.rs  gpu_test.rs  hittable.rs  interval.rs  lib.rs  main.rs  mandelbrot.rs  material.rs  models.rs  octree.rs  octree_parallel.rs  octree_traversal.rs  ourple.rs  path_tracer.rs  ported_shaders.rs  quad.rs  ray.rs  ray_tracing.rs  renderer.rs  resource_manager.rs  rtw_image.rs  scene.rs  sphere.rs  texture.rs  texture_manager.rs  textures.rs  tile_renderer.rs  translation.rs  util.rs  vec3.rs  vec4.rs  voxel_scene.rs  (+2 more)
src/app/: main_app.rs  settings.rs  world_loading.rs
src/colors/: colors.rs  mod.rs
src/geometry/: aabb.rs  bvh.rs  cuboid.rs  interval.rs  quad.rs  sphere.rs  translation.rs
src/gpu_structs/: cuboid.rs  gpu_camera.rs  gpu_material.rs  gpu_octree.rs  gpu_quad.rs  model.rs
src/hittable/: hittable.rs  mod.rs
src/octree/: new_octree.rs  octree.rs  octree_parallel.rs  octree_traversal.rs  voxel_scene.rs
src/packed_indices/: mod.rs
src/ported_shaders/: mandelbrot.rs  ourple.rs
src/ray/: mod.rs  path_tracer.rs  ray.rs
src/ray_tracing/: aabb.rs  axis.rs  bvh.rs  camera.rs  cuboid.rs  hittable.rs  material.rs  models.rs  path_tracer.rs  quad.rs  ray.rs  resource_manager.rs  scene.rs  sphere.rs  texture.rs  tile_renderer.rs  translation.rs
src/renderer/: camera.rs  dummy_renderer.rs  gpu_renderer.rs  renderer_trait.rs  thread_pool_renderer.rs  tile_renderer.rs
src/scene/: mod.rs  resource_manager.rs  resource_model.rs  scene.rs
src/textures/: material.rs  rtw_image.rs  texture.rs
src/voxels/: octree.rs  octree_parallel.rs  octree_traversal.rs
