[package]
name = "ray_tracing"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10.0"
stb_image = "0.3.0"
spider_eye = { path = "../spider_eye" }
smol_str = "0.3.2"
fast-math = "0.1.1"
glam = "0.29.2"
rand_distr = "0.4.3"
rand = "0.8.5"
bitflags = "2.6.0"
anyhow = "1.0.95"
num-traits = "0.2.19"

[profile.release-with-debug]
inherits = "release"
debug = true
