[package]
name = "ray_tracing"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10.0"
stb_image = "0.3.0"
spider_eye = { path = "../spider_eye" }
smol_str = "0.3.2"
fast-math = "0.1.1"
glam = "0.29.2"
bitflags = "2.6.0"
anyhow = "1.0.95"
num-traits = "0.2.19"
dashmap = "6.1.0"
fxhash = "0.2.1"
image = "0.25.5"
rand = "0.8.5"
rand_distr = "0.4.3"
lazy_static = "1.5.0"
hashbrown = "0.15.2"
aovec = "1.1.0"
eframe = "0.31.1"
egui_extras = { version = "0.31.1", features = ["default", "image"] }
env_logger = "0.11.8"

[profile.release-with-debug]
inherits = "release"

[profile.release]
panic = "abort"
debug = true

