[package]
name = "ray_tracing"
version = "0.1.0"
edition = "2021"
rust-version = "1.88.0"

[dependencies]
rayon = "1.10.0"
stb_image = "0.3.0"
spider_eye = { path = "../spider_eye" }
smol_str = "0.3.2"
fast-math = "0.1.1"
glam = { version = "0.30.5", features = ["bytemuck"] }
bitflags = "2.9.1"
anyhow = "1.0.95"
num-traits = "0.2.19"
dashmap = "6.1.0"
fxhash = "0.2.1"
image = "0.25.8"
rand = "0.9.2"
lazy_static = "1.5.0"
hashbrown = "0.15.3"
aovec = "1.1.0"
eframe = { version = "0.31.1", features = ["default", "wgpu"] }
egui_extras = { version = "0.31.1", features = ["default", "image"] }
env_logger = "0.11.8"
lasso = "0.7.3"
bytemuck = "1.23.0"
pollster = "0.4.0"
log = "0.4.28"
egui-wgpu = "0.31.1"
rand_distr = "0.5.1"
parking_lot = "0.12.4"
rfd = "0.15.3"
nonany = "0.3.0"


[profile.release-with-debug]
inherits = "release"

[profile.release]
debug = true
